# MCP_specialist_agent

./: README.md  cursor_custom_mode_instructions.md  home_cursor_mcp.json  mcp.json
python_server/: __init__.py  pyproject.toml  server.py
rules/: mcp-specialist.mdc
scripts/: run_python.sh  run_ts.sh
typescript_server/: package.json  tsconfig.json
typescript_server/src/: index.ts
